--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title> 원예진 - SK Picglobal </title>
     <link rel="stylesheet" href="./css/style.css">
+    <!-- 페비콘 --> 
+    <link rel="shoutcut icon" href="./images/fv.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;600;700&display=swap" rel="stylesheet">
